--- a/estilo/style.css
+++ b/estilo/style.css
@@ -86,6 +86,7 @@ nav > a {
     border-radius: 5px;
     text-decoration: none;
     font-weight: bold;
+    margin-top: 30px;
 }
 
 nav > a:hover {
