--- a/estilo/style.css
+++ b/estilo/style.css
@@ -78,7 +78,7 @@ nav {
     padding: 10px;
     box-shadow: 0px 7px 7px rgba(0, 0, 0, 0.205);
     padding-top: 30px;
-    max-width: 400px;
+    min-width: 400px;
 }
 
 nav > a {
