--- a/estilo/style.css
+++ b/estilo/style.css
@@ -71,15 +71,15 @@ header p {
     margin: auto;
     padding-left: 10px;
     padding-right: 10px;
-    padding-bottom: 20px;
+    margin-bottom: 30px;
 }
 
 nav {
     background-color: var(--cor5);
     padding: 10px;
     box-shadow: 0px 7px 7px rgba(0, 0, 0, 0.205);
-    padding-top: 30px;
-    min-width: 400px;
+    padding-top: 50px;
+    max-height: 500px;
 }
 
 nav > a {
