--- a/estilo/style.css
+++ b/estilo/style.css
@@ -71,25 +71,24 @@ header p {
     margin: auto;
     padding-left: 10px;
     padding-right: 10px;
-    margin-bottom: 30px;
+    padding-bottom: 20px;
+    
 }
 
 nav {
     background-color: var(--cor5);
-    padding: 10px;
+    padding: 50px 20px 10px 40px;
     box-shadow: 0px 7px 7px rgba(0, 0, 0, 0.205);
-    padding-top: 50px;
-    max-height: 500px;
+    max-height: 600px;
 }
 
 nav > a {
     color: white;
-    padding: 10px;
+    padding: 10px 10px 10px 10px;
     border-radius: 5px;
     text-decoration: none;
     font-weight: bold;
-    min-height: 300px;
-
+    max-height: 600px;
 }
 
 nav > a:hover {
