--- a/estilo/style.css
+++ b/estilo/style.css
@@ -71,24 +71,22 @@ header p {
     margin: auto;
     padding-left: 10px;
     padding-right: 10px;
-    padding-bottom: 20px;
-    
+    padding-bottom: 50px;  
+    text-shadow: 2px 2px 1px rgba(0, 0, 0, 0.356); 
 }
 
 nav {
     background-color: var(--cor5);
-    padding: 50px 20px 10px 40px;
+    padding: 10px;
     box-shadow: 0px 7px 7px rgba(0, 0, 0, 0.205);
-    max-height: 600px;
 }
 
 nav > a {
-    color: white;
-    padding: 10px 10px 10px 10px;
+    color: var(--cor1);
+    padding: 10px;
     border-radius: 5px;
     text-decoration: none;
     font-weight: bold;
-    max-height: 600px;
 }
 
 nav > a:hover {
