--- a/estilo/style.css
+++ b/estilo/style.css
@@ -79,6 +79,7 @@ nav {
     background-color: var(--cor5);
     padding: 10px;
     box-shadow: 0px 7px 7px rgba(0, 0, 0, 0.205);
+    padding-top: 50px;
 }
 
 nav > a {
