--- a/estilo/style.css
+++ b/estilo/style.css
@@ -52,6 +52,7 @@ header {
     height: 150px;
     text-align: center;
     padding-top: 40px;
+    padding-bottom: 40px;
 }
 
 header h1 { 
@@ -79,7 +80,7 @@ nav {
     background-color: var(--cor5);
     padding: 10px;
     box-shadow: 0px 7px 7px rgba(0, 0, 0, 0.205);
-    padding-top: 50px;
+
 }
 
 nav > a {
@@ -88,6 +89,7 @@ nav > a {
     border-radius: 5px;
     text-decoration: none;
     font-weight: bold;
+    min-height: 350px;
 }
 
 nav > a:hover {
